# ds-algos-rust

./: Cargo.toml  README.md
.github/workflows/: run-tests.yml
algorithm/examples/: binary_search.rs  bubble_sort.rs
castles/: Cargo.toml
castles/examples/: reqwest_basics.rs  serde_basics.rs  serde_deserialize_techniques.rs
concurrency/: Cargo.toml
concurrency/examples/: concurrent_http.rs  threads.rs
leetcode/examples/: q0001.rs  q0121.rs  q0171.rs
src/: leetcode.rs  lib.rs  main.rs  utils.rs
src/algorithm/: binary_search.rs  bubble_sort.rs
src/castles/: mod.rs  reqwest_basics.rs  serde_deserialize_techniques.rs
src/learning/: serde.rs
src/leetcode/: q0001.rs  q0171.rs
src/utils/: loop_guard.rs
