[package]
name = "concurrency"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
reqwest = { version = "0.11", features = ["json", "blocking", "cookies"] }
serde = {version="1.0.143", features = ["derive"]}
serde_json = "1.0.83"
tokio = { version = "1", features = ["full"] }
